# Python-QR

./: README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  dependabot.yml  lint.yml
Python-QR/: app.py
