[tool.poetry]
name = "python-qr"
version = "1.0.0"
description = ""
authors = ["RLAlpha49 <75044176+RLAlpha49@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9.8"
streamlit = "^1.39.0"
qrcode = "^8.0"

[tool.poetry.dev-dependencies]
types-requests = "*"
isort = "^5.13.2"
black = "^24.10.0"
pylint = "^3.3.1"
mypy = "^1.12.0"
flake8 = "^7.1.1"

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.flake8]
max-line-length = 120

[tool.pylint]
max-line-length = 120

[tool.mypy]
disable_error_code = "import-untyped"